<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/background"

        android:layout_height="match_parent"
        android:layout_width="match_parent"

        android:id="@+id/main_coordinator_layout"
>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:indeterminate="true"
                android:visibility="gone"

                app:layout_constraintTop_toTopOf="@id/phone_input_layout" />

            <LinearLayout
                android:id="@+id/phone_input_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingStart="12dp"
                android:paddingEnd="24dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/phone_hint"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_phone_button"

                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"

                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:tooltipText="@string/save_phone"
                    app:icon="@drawable/lock_open"
                    app:iconSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_input_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:orientation="horizontal"

                android:paddingStart="12dp"
                android:paddingEnd="24dp"

                app:layout_constraintTop_toBottomOf="@+id/phone_input_layout">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/email_hint"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_email_button"

                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"

                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"

                    android:tooltipText="@string/save_email"
                    app:icon="@drawable/lock_open"
                    app:iconSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_input_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:orientation="horizontal"

                android:paddingStart="12dp"
                android:paddingEnd="24dp"

                app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/date_hint"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/date_button"

                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"

                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"

                    android:tooltipText="@string/set_date"
                    app:icon="@drawable/calendar"
                    app:iconSize="30dp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_button"

                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp
"
                android:layout_marginEnd="24dp"
                android:text="@string/send_to_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_input_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
